@@ -1,0 +1,2 @@
+prog: vfae
+vgopts: -q
