@@ -1,0 +1,2 @@
+prog: vistr
+vgopts: -q
