@@ -1,0 +1,2 @@
+prog: vstrc
+vgopts: -q
